--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 .head{
     display: flex;
     justify-content: space-between;
-    width: 1200px;
+    /* width: 1200px; */
     height: 43px;
     opacity: 1;
     margin: 48px 112px;
