--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
     /* width: 1200px; */
     height: 43px;
     opacity: 1;
-    margin: 48px 112px;
+    margin: 48px auto;
 
 }
 .head> .logo{
